--- a/flask-madlibs-further/templates/choose-story.html
+++ b/flask-madlibs-further/templates/choose-story.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Madlibs</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block title %}Madlibs{% endblock %}
+
+{% block content %}
     <h1>Madlibs</h1>
     <form action="/questions">
       <select name="story_id">
@@ -18,5 +14,4 @@
       </select>
       <button>Go</button>
     </form>
-</body>
-</html>
+{% endblock %}
