--- a/flask-madlibs-further/templates/result.html
+++ b/flask-madlibs-further/templates/result.html
@@ -1,13 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Madlib story</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block title %}Madlibs{% endblock %}
+
+{% block content %}
     <h1>Madlib</h1>
     <p>{{ text }}.</p>
-</body>
-</html>
+{% endblock %}
